Added picocli, -d argument and added the main class to jar's manifest (#17)
* Added picocli, -d argument and added the main class to jar's manifest

* Reworded phrase related to the destination of the generated app

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>

* Improved exception handling in ReadFileFromResources

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>

Signed-off-by: Helber Belmiro <helber.belmiro@gmail.com>
Signed-off-by: Vipin Sharma <vipin@jfeatures.com>
Co-authored-by: Vipin Sharma <vipin@jfeatures.com>